--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
     "singleQuote": true,
     "tabWidth": 2,
-    "trailingComma": "none",
+    "trailingComma": "es5",
     "printWidth": 100,
-    "semi": false,
-    "arrowParens": "always",
+    "semi": true,
+    "arrowParens": "avoid",
     "plugins": [
         "prettier-plugin-tailwindcss"
     ]
