--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "jobtracker",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext .ts,.tsx --fix",
-    "format": "prettier --write \"src/**/*.{js,ts,tsx,json,md}\"",
-    "lint:check": "eslint . --ext .ts,.tsx",
-    "format:check": "prettier --check \"src/**/*.{js,ts,tsx,json,md}\"",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.49.1",
-    "@tailwindcss/vite": "^4.0.12",
-    "@tanstack/react-query": "^5.67.3",
-    "axios": "^1.8.3",
-    "formik": "^2.4.6",
-    "lucide-react": "^0.479.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.3.0",
-    "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.0.12",
-    "uuid": "^11.1.0",
-    "yup": "^1.6.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-dom": "^1.31.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-react-x": "^1.31.0",
-    "globals": "^15.15.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
-  }
+    "name": "jobtracker",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "prettier": "prettier --check src/**/*.{ts,tsx}",
+        "prettier:fix": "prettier --write src/**/*.{ts,tsx}",
+        "lint": "eslint -c eslint.config.js --no-config-lookup --cache --cache-location .cache/eslint/ src",
+        "lint:fix": "eslint -c eslint.config.js --no-config-lookup --cache --cache-location .cache/eslint/ --fix src",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@supabase-cache-helpers/postgrest-react-query": "^1.12.0",
+        "@supabase/supabase-js": "^2.49.1",
+        "@tailwindcss/vite": "^4.0.15",
+        "@tanstack/react-query": "^5.69.0",
+        "formik": "^2.4.6",
+        "lucide-react": "^0.479.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-hot-toast": "^2.5.2",
+        "react-router": "^7.4.0",
+        "tailwindcss": "^4.0.15",
+        "uuid": "^11.1.0",
+        "yup": "^1.6.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.22.0",
+        "@types/node": "^22.13.11",
+        "@types/react": "^19.0.12",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.22.0",
+        "eslint-plugin-react-dom": "^1.37.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "eslint-plugin-react-x": "^1.37.0",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-no-barrel-files": "^1.2.1",
+        "globals": "^15.15.0",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "typescript": "~5.7.3",
+        "typescript-eslint": "^8.27.0",
+        "vite": "^6.2.2"
+    }
 }
