--- a/package.json
+++ b/package.json
@@ -13,36 +13,54 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ark-ui/react": "^5.3.1",
+        "@loadable/component": "^5.16.4",
         "@supabase-cache-helpers/postgrest-react-query": "^1.12.0",
         "@supabase/supabase-js": "^2.49.1",
         "@tailwindcss/vite": "^4.0.15",
         "@tanstack/react-query": "^5.69.0",
+        "chartjs": "^0.3.24",
+        "date-fns": "^4.1.0",
         "formik": "^2.4.6",
         "lucide-react": "^0.479.0",
         "react": "^19.0.0",
+        "react-circular-progressbar": "^2.2.0",
         "react-dom": "^19.0.0",
         "react-hot-toast": "^2.5.2",
+        "react-markdown": "^10.1.0",
         "react-router": "^7.4.0",
+        "recharts": "^2.15.1",
+        "rehype-stringify": "^10.0.1",
+        "remark-gfm": "^4.0.1",
+        "remark-parse": "^11.0.0",
+        "remark-rehype": "^11.1.1",
+        "rollup-plugin-polyfill-node": "^0.13.0",
+        "supabase": ">=1.8.1",
         "tailwindcss": "^4.0.15",
+        "tailwindcss-animate": "^1.0.7",
+        "terser": "^5.39.0",
+        "unified": "^11.0.5",
         "uuid": "^11.1.0",
         "yup": "^1.6.1"
     },
     "devDependencies": {
-        "@eslint/js": "^9.22.0",
+        "@eslint/js": "^9.23.0",
+        "@types/loadable__component": "^5.13.9",
         "@types/node": "^22.13.11",
         "@types/react": "^19.0.12",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
-        "eslint": "^9.22.0",
-        "eslint-plugin-react-dom": "^1.37.0",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-react-refresh": "^0.4.19",
-        "eslint-plugin-react-x": "^1.37.0",
+        "eslint": "^9.23.0",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-no-barrel-files": "^1.2.1",
+        "eslint-plugin-react-dom": "^1.37.3",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "eslint-plugin-react-x": "^1.37.3",
         "globals": "^15.15.0",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "rollup-plugin-visualizer": "^5.14.0",
         "typescript": "~5.7.3",
         "typescript-eslint": "^8.27.0",
         "vite": "^6.2.2"
