--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/types/database.ts"],
   "exclude": ["node_modules"]
 }
