--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,25 +14,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
+      - name: Installing bun
+        uses: oven-sh/setup-bun@v2
         with:
-          version: 10
+          bun-version: 1.2.0
+
+      - name: Install dependencies
+        run: bun install
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
-
-      - name: Install dependencies
-        run: pnpm install
 
       - name: Build Project
-        run: pnpm run build
+        run: bun run build
 
       - name: Eslint
-        run: pnpm run lint
+        run: bun run lint:fix
 
       - name: Format
-        run: pnpm run format
+        run: bun run prettier:fix
