--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,31 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*q
+lerna-debug.log*
+bun-debug.log*
 
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build outputs
 dist
 dist-ssr
 *.local
+.cache/
+build/
+out/
+
+# Bundle analysis
+analyze-bundle.html
+stats.html
+bundle-analysis/
+webpack-bundle-analyzer/
+
+# Testing
+coverage/
+.nyc_output/
 
 # Editor directories and files
 .vscode/*
@@ -23,9 +42,24 @@ dist-ssr
 *.sln
 *.sw?
 
+# Environment variables
 .env
+.env.local
+.env.*.local
+.env.development
+.env.test
+.env.production
 
 # Sentry Config File
 .env.sentry-build-plugin
 
-.cache/
+# Supabase
+.env.local.supabase
+supabase/.temp/
+
+# TypeScript
+*.tsbuildinfo
+
+# Misc
+.DS_Store
+Thumbs.db
