--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "terser": "^5.39.0",
         "unified": "^11.0.5",
         "uuid": "^11.1.0",
-        "yup": "^1.6.1"
+        "yup": "^1.6.1",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.23.0",
