--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,12 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:5173"
+      - "5173:5173"
     environment:
       - NODE_ENV=production
       - VITE_SUPABASE_URL=${VITE_SUPABASE_URL}
       - VITE_SUPABASE_ANON_KEY=${VITE_SUPABASE_ANON_KEY}
+      - VITE_BASE_URL=${VITE_BASE_URL}
     volumes:
       - .:/app
       - /app/node_modules
@@ -32,6 +33,7 @@ services:
       - NODE_ENV=development
       - VITE_SUPABASE_URL=${VITE_SUPABASE_URL}
       - VITE_SUPABASE_ANON_KEY=${VITE_SUPABASE_ANON_KEY}
+      - VITE_BASE_URL=${VITE_BASE_URL}
     command: npm run dev
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:5173"]
