--- a/package.json
+++ b/package.json
@@ -30,18 +30,22 @@
         "rollup-plugin-polyfill-node": "^0.13.0",
         "terser": "^5.39.0",
         "uuid": "^11.1.0",
+        "vite-plugin-babel": "^1.3.0",
         "yup": "^1.6.1",
         "zustand": "^5.0.3"
     },
     "devDependencies": {
+        "@babel/preset-typescript": "^7.27.0",
         "@eslint/js": "^9.23.0",
         "@types/node": "^22.13.11",
         "@types/react": "^19.0.12",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
+        "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
         "eslint": "^9.23.0",
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-no-barrel-files": "^1.2.1",
+        "eslint-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
         "eslint-plugin-react-dom": "^1.37.3",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
