--- a/package.json
+++ b/package.json
@@ -13,11 +13,27 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mdxeditor/editor": "^3.29.1",
         "@supabase/supabase-js": "^2.49.1",
         "@tailwindcss/vite": "^4.0.15",
         "@tanstack/react-query": "^5.69.0",
+        "@tiptap/core": "^2.11.7",
+        "@tiptap/extension-image": "^2.11.7",
+        "@tiptap/extension-link": "^2.11.7",
+        "@tiptap/extension-table": "^2.11.7",
+        "@tiptap/extension-table-cell": "^2.11.7",
+        "@tiptap/extension-table-header": "^2.11.7",
+        "@tiptap/extension-table-row": "^2.11.7",
+        "@tiptap/extension-task-list": "^2.11.7",
+        "@tiptap/extension-text-align": "^2.11.7",
+        "@tiptap/extension-underline": "^2.11.7",
+        "@tiptap/pm": "^2.11.7",
+        "@tiptap/react": "^2.11.7",
+        "@tiptap/starter-kit": "^2.11.7",
+        "add": "^2.0.6",
         "axios": "^1.8.4",
         "cheerio": "^1.0.0",
+        "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "formik": "^2.4.6",
         "lucide-react": "^0.479.0",
@@ -28,6 +44,7 @@
         "react-router": "^7.4.0",
         "remark-gfm": "^4.0.1",
         "rollup-plugin-polyfill-node": "^0.13.0",
+        "tailwind-merge": "^3.1.0",
         "terser": "^5.39.0",
         "uuid": "^11.1.0",
         "vite-plugin-babel": "^1.3.0",
