--- a/package.json
+++ b/package.json
@@ -1,60 +1,62 @@
 {
-    "name": "jobtracker",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
-        "prettier": "prettier --check src/**/*.{ts,tsx}",
-        "prettier:fix": "prettier --write src/**/*.{ts,tsx}",
-        "lint": "eslint -c eslint.config.js --no-config-lookup --cache --cache-location .cache/eslint/ src",
-        "lint:fix": "eslint -c eslint.config.js --no-config-lookup --cache --cache-location .cache/eslint/ --fix src",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@mdxeditor/editor": "^3.29.1",
-        "@supabase/supabase-js": "^2.49.1",
-        "@tailwindcss/vite": "^4.0.15",
-        "@tanstack/react-query": "^5.69.0",
-        "clsx": "^2.1.1",
-        "date-fns": "^4.1.0",
-        "formik": "^2.4.6",
-        "lucide-react": "^0.479.0",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-hot-toast": "^2.5.2",
-        "react-router": "^7.4.0",
-        "rollup-plugin-polyfill-node": "^0.13.0",
-        "tailwind-merge": "^3.1.0",
-        "terser": "^5.39.0",
-        "uuid": "^11.1.0",
-        "vite-plugin-babel": "^1.3.0",
-        "yup": "^1.6.1",
-        "zustand": "^5.0.3"
-    },
-    "devDependencies": {
-        "@babel/preset-typescript": "^7.27.0",
-        "@eslint/js": "^9.23.0",
-        "@types/node": "^22.13.11",
-        "@types/react": "^19.0.12",
-        "@types/react-dom": "^19.0.4",
-        "@vitejs/plugin-react": "^4.3.4",
-        "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
-        "eslint": "^9.23.0",
-        "eslint-plugin-import": "^2.31.0",
-        "eslint-plugin-no-barrel-files": "^1.2.1",
-        "eslint-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
-        "eslint-plugin-react-dom": "^1.37.3",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-react-refresh": "^0.4.19",
-        "eslint-plugin-react-x": "^1.37.3",
-        "globals": "^15.15.0",
-        "prettier": "^3.5.3",
-        "prettier-plugin-tailwindcss": "^0.6.11",
-        "rollup-plugin-visualizer": "^5.14.0",
-        "typescript": "~5.7.3",
-        "typescript-eslint": "^8.27.0",
-        "vite": "^6.2.2"
-    }
+  "name": "jobtracker",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "prettier": "prettier --check src/**/*.{ts,tsx}",
+    "prettier:fix": "prettier --write src/**/*.{ts,tsx}",
+    "lint": "eslint -c eslint.config.js --no-config-lookup --cache --cache-location .cache/eslint/ src",
+    "lint:fix": "eslint -c eslint.config.js --no-config-lookup --cache --cache-location .cache/eslint/ --fix src",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@mdxeditor/editor": "^3.29.1",
+    "@supabase/supabase-js": "^2.49.1",
+    "@tailwindcss/vite": "^4.0.15",
+    "@tanstack/react-query": "^5.69.0",
+    "@types/selenium-webdriver": "^4.1.28",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
+    "lucide-react": "^0.479.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router": "^7.4.0",
+    "rollup-plugin-polyfill-node": "^0.13.0",
+    "selenium-webdriver": "^4.31.0",
+    "tailwind-merge": "^3.1.0",
+    "terser": "^5.39.0",
+    "uuid": "^11.1.0",
+    "vite-plugin-babel": "^1.3.0",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.27.0",
+    "@eslint/js": "^9.23.0",
+    "@types/node": "^22.13.11",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
+    "eslint": "^9.23.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-no-barrel-files": "^1.2.1",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
+    "eslint-plugin-react-dom": "^1.37.3",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-x": "^1.37.3",
+    "globals": "^15.15.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.27.0",
+    "vite": "^6.2.2"
+  }
 }
