--- a/package.json
+++ b/package.json
@@ -10,26 +10,29 @@
     "prettier:fix": "prettier --write src/**/*.{ts,tsx}",
     "lint": "eslint -c eslint.config.js --no-config-lookup --cache --cache-location .cache/eslint/ src",
     "lint:fix": "eslint -c eslint.config.js --no-config-lookup --cache --cache-location .cache/eslint/ --fix src",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docker:build": "docker build -t jobtracker-api -f Dockerfile .",
+    "docker:run": "docker run -p 9001:9001 jobtracker-api"
   },
   "dependencies": {
     "@mdxeditor/editor": "^3.29.1",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-query": "^5.69.0",
-    "@types/selenium-webdriver": "^4.1.28",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.479.0",
+    "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router": "^7.4.0",
+    "react-virtuoso": "^4.12.6",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "selenium-webdriver": "^4.31.0",
     "tailwind-merge": "^3.1.0",
     "terser": "^5.39.0",
+    "ts-node": "^10.9.2",
     "uuid": "^11.1.0",
     "vite-plugin-babel": "^1.3.0",
     "yup": "^1.6.1",
